small-news boxshadows and text

--- a/code/index.html
+++ b/code/index.html
@@ -46,23 +46,41 @@
 
     <section class="small-news">
       <!-- The other news-->
+      <div class="small-news-text">
       <a class="small-image" href="eastward.html">
         <img class="small" src="https://assets1.ignimgs.com/2019/08/23/eastward---button-fin-1566519472279.jpg">
-        <div class="bottom-center">EASTWARD</div>    
-      </a>  
+      </a>    
+        <h4>EASTWARD</h4>
+        <p>DISCOVER THE WEIRD, 
+          <br>WONDERFUL WORLD OF 
+          <br>EASTWARD!</p>
+        </div>    
+        <div class="small-news-text">
       <a class="small-image" href="nino-kuni.html">
         <img class="small" src="https://cdns.kinguin.net/media/catalog/category/cache/1/hi_image/9df78eab33525d08d6e5fb8d27136e95/nino8.jpg">
-        <div class="bottom-center">NINO-KUNI</div>
       </a>
+        <h4>NINO-KUNI</h4>
+        <p>Journey to the other 
+          <br>world in Ni no Kuni:
+          <br> Wrath of the White Witch</p>
+      </div>
+      <div class="small-news-text">
       <a class="small-image" href="./fez.html">
         <img class="small" src="https://images.nintendolife.com/fb2e057967efd/fez-cover.cover_large.jpg">
-        <div class="bottom-center">FEZ</div>
-      </a>
+      </a>  
+        <h4>FEZ</h4>
+        <p>Gomez is a 2D creature 
+          <br>living in a 2D world.
+          <br> Or is he?</p>
+    </div>
+    <div class="small-news-text">
       <a class="small-image" href="./narita-boy.html">
         <img class="small"src="https://assets-prd.ignimgs.com/2021/02/05/narita-boy-button-01-1612487969751.jpg">
-        <div class="bottom-center">NARITA-BOY</div>
-      </a> 
-
+      </a>
+        <h4>NARITA-BOY</h4>
+        <p>“Narita Boy” – the retro-
+          <br>futuristic 2D pixel game.</p>
+       </div>
     </section>
       
   </body>
