--- a/code/index.html
+++ b/code/index.html
@@ -68,12 +68,8 @@
           about and shared could have taken place anywhere. For Angelica it took
           place in Rågsved. In her universe.”</p>
         <!-- </section> -->
-        <div class="big-news">
-          <div>
+        <div class="big-news-img-container">
           <img class="big-news-small-img" src="bicycle.jpg" alt="Photo of a bicycle on a balcony" />
-          <p>dkfughdkfjghkjdf</p>
-        </div>
-        
         <img class="big-news-small-img" src="dora.jpg" alt="Upclose picture of a woman" />
           <img class="big-news-small-img" src="elliott-polaroid.jpg" alt="A polroid with text" />
         </div>
