changed the structure on  the  code. Now mobile first

--- a/code/index.html
+++ b/code/index.html
@@ -6,66 +6,84 @@
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header class="header">
       <div class="fox-logo">
-        <img src="./foxlogo.svg" alt="team foxes logotype" />
+        <img class="the-fox" src="./foxlogo.svg" alt="team foxes logotype" />
         <h1>Fox News</h1>
       </div>
       <nav class="navigation">
           <a href="#">About The Foxes</a>
           <a href="#">Want to contribute?</a>
-          <a class="button-link" href="#">Subscribe!</a> 
       </nav>
+      <div class="button-link">
+          <a href="#">Subscribe!</a> 
+      </div>
+
     </header>
 
     <section class="big-news-container">
       <!-- The big news content -->
       <img class="big-news-img" src="./wired_pic.png" alt="illustration by Elena Lacey" />
-      <div class="big-news-text">
-        <h2>Open Source Fonts Are <span class="word-color-change">Love Letters</span> to the Design Community</h2>
-        <p>FONT FAMILIES CAN sell for hundreds of dollars. Gotham, a popular typeface used by President Barack Obama’s campaign and many others, costs nearly $1,000 to license a complete set of 66 different styles. But The League of Moveable Type, gives all of its fonts away for free. What's more, it makes them open source, so that other people can modify the fonts and make their own versions of them.</p>
-        <a class="big-news-link" href="https://www.wired.com/story/open-source-fonts-love-letters-design-community/"> Read all about it on WIRED </a>
-      </div>
+      <section class="big-news-text">
+        <div>
+          <h2>Open Source Fonts Are <span class="word-color-change">Love Letters</span> to the Design Community</h2>
+        </div>
+        <div>
+         <p>FONT FAMILIES CAN sell for hundreds of dollars. Gotham, a popular typeface used by President Barack Obama’s campaign and many others, costs nearly $1,000 to license a complete set of 66 different styles. But The League of Moveable Type, gives all of its fonts away for free. What's more, it makes them open source, so that other people can modify the fonts and make their own versions of them.</p>
+          <a class="big-news-link" href="https://www.wired.com/story/open-source-fonts-love-letters-design-community/"> Read all about it on WIRED </a>
+        </div>
+      </section>
     </section>
 
     <section class="small-news-container">
       <!-- The other news  -->
       <div class="small-news-item"> 
-        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> <img class="small-news-img" src="./color-img.png" alt="#"/>
-        <h3 class="small-news-text">How Humanity’s Obsession With Color Has Shaped Our Modern World</h3>
+        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
+          <img class="small-news-img" src="./color-img.png" alt="#"/>
+        <h3 class="small-news-text">Humanity’s Obsession With Color Has Shaped Our Modern World</h3>
         </a>
       </div>
-      <div class="small-news-item">
-        <img class="small-news-img" src="./2.png" alt="#" />
-        <h3>This is the small news heading</h3>
-      </div>
-      <div class="small-news-item">
-        <img class="small-news-img" src="./3.png" alt="#" />
-        <h3>This is the small news heading</h3>
-      </div>
-      <div class="small-news-item">
-        <img class="small-news-img" src="./4.png" alt="#" />
-        <h3>This is the small news heading</h3>
+      <div class="small-news-item"> 
+        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
+          <img class="small-news-img" src="./facemask.png" alt="facemask"/>
+        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        </a>
       </div>
       <div class="small-news-item"> 
-        <img class="small-news-img" src="./1.png" alt="#"/>
-        <h3 class="small-news-text">This is the small news heading</h3>
+        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
+          <img class="small-news-img" src="./facemask.png" alt="facemask"/>
+        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        </a>
       </div>
-      <div class="small-news-item">
-        <img class="small-news-img" src="./2.png" alt="#" />
-        <h3>This is the small news heading</h3>
+      <div class="small-news-item"> 
+        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
+          <img class="small-news-img" src="./facemask.png" alt="facemask"/>
+        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        </a>
       </div>
-      <div class="small-news-item">
-        <img class="small-news-img" src="./3.png" alt="#" />
-        <h3>This is the small news heading</h3>
+      <div class="small-news-item"> 
+        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
+          <img class="small-news-img" src="./facemask.png" alt="facemask"/>
+        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        </a>
       </div>
-      <div class="small-news-item">
-        <img class="small-news-img" src="./4.png" alt="#" />
-        <h3>This is the small news heading</h3>
+      <div class="small-news-item"> 
+        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
+          <img class="small-news-img" src="./facemask.png" alt="facemask"/>
+        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        </a>
       </div>
+      <div class="small-news-item"> 
+        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
+          <img class="small-news-img" src="./facemask.png" alt="facemask"/>
+        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear</h3>
+        </a>
+      </div>
+
     </section>
   </body>
 
