new logo header, new div in header

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,10 @@
   <body>
 
     <header class="header">
-      <img class="logo" src="pic/logo.svg" alt="logo Technigo">
+      <div class="logo-and-text">
+        <img class="logo" src="pic/logo.png" alt="logo for the tree news">
+        <h1 class="header-text">THE TREES NEWS</h1>
+    </div>
       <nav>
         <a href="#">Read more</a>
         <a href="#">Members</a>
