changed the color of links

--- a/code/index.html
+++ b/code/index.html
@@ -97,9 +97,9 @@
 
 <footer>
   <div class="links">
-  <div class="top"><a href=""> 🢁</a></div>
-    <img src="images/celebration.png" alt="logo of fox who's holding maracas">
-      <p><strong>Sofia</strong></p>
+    <div class="top"><a href="">To the top</a></div>
+    <img src="images/celebration.png" alt="logo of a fox who's holding maracas">
+      <p><strong>Sofia Wallerberg</strong></p>
       <p>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
       <p>Stickers made by <a href="https://www.flaticon.com/authors/stickerfolio" title="stickerfolio">stickerfolio</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
       </p>
