added  header and news sections, basic layout and responsive design

--- a/code/index.html
+++ b/code/index.html
@@ -5,19 +5,54 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    <h1>My heading is great!</h1>
+    <header class="site-header">
+      <!-- a header wih a site name, a logo and a navbar -->
+      <a href="#" >
+        <img class="logo" src="./logo.svg" alt="Technigo" />
+      </a>
+      <h1 class="page-title">This awesome news site</h1>
+      <nav>
+        <p class="nav-bar">
+          <a href="#">News archive</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </p>
+      </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
-
-    <section class="">
-      <!-- The other news  -->
-    </section>
+      <section class="big-news-container">
+        <!-- The big news content -->
+        <div class="big-news">
+          <h2>My big news</h2>
+        </div>
+      </section>
+        
+      <section class="small-news-container">
+        <!-- The other news  -->
+        <div class="small-news">
+        <h2>My small news 1</h2>
+      </div>
+      <div class="small-news">
+        <h2>My small news 2</h2>
+      </div>
+      <div class="small-news">
+        <h2>My small news 3</h2>
+        </div>
+      <div class="small-news">
+        <h2>My small news 4</h2>
+        </div>
+      <div class="small-news">
+        <h2>My small news 5</h2>
+        </div>
+      <div class="small-news">
+        <h2>My small news 6</h2>
+        </div>
+      <div class="small-news">
+        <h2>My small news 7</h2>
+        </div>
+      </section>
   </body>
 </html>
