added meta tag in html and @media in css

--- a/code/index.html
+++ b/code/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header></header>
+    <header>
       <img src="./logo.svg" alt="Technigo" />
       <nav>
         <a href="#">Big news</a>
@@ -23,6 +23,15 @@
     </section>
 
     <section class="">
+      <p>
+        Lorem Ipsum is the single greatest threat
+      </p>
+      <p>
+        Lorem Ipsum is the single greatest threat
+      </p>
+      <p>
+        Lorem Ipsum is the single greatest threat
+      </p>
       <p>
         Lorem Ipsum is the single greatest threat
       </p>
