added a favicon and made some scale transform to the articles

--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2: The News Site</title>
+    <title>The oldest news</title>
+    <link rel="icon" type="image/png" href="./img/newspaper.png"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -109,7 +110,7 @@
       </article>
       <article class="article">
         <img class="small-image" src="./img/earth.jpg" alt="the earth">
-        <h3 class="article-heading">shocking, the earth is not flat</h3>
+        <h3 class="article-heading">shocking news, the earth is not flat?!</h3>
         <p>The Year 2000 problem, also known as the Y2K problem,
           Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
           refers to potential computer errors related to the 
