--- a/code/index.html
+++ b/code/index.html
@@ -88,7 +88,7 @@
     </section>
 
     <footer>
-      <p class="p-footer"><a href="index.html">Havsliv</a> | Skapad av Linnéa Wilhelmsson 🐘 </p>
+      <p class="p-footer"><a href="index.html">Ocean News</a> | Skapad av Linnéa Wilhelmsson 🐘 </p>
   </footer>
 
   </body>
