cleaned the code and comments

--- a/code/index.html
+++ b/code/index.html
@@ -68,7 +68,7 @@
             </div>
         </header>  
 
-        <!--navbar with five links. Put # in order to target it later on-->
+        <!--navbar with five links. Put # in order to target it with id-->
         <nav class="navbar">
             <div class="link">
                 <a href="#top"> <h5>Home</h5> </a>
@@ -93,7 +93,7 @@
                 <img src="./corona.jpg" alt="image of coronavirus">
             </div>
             <div class="big-news" id="health"> <!--put an id so we can target it from navbar-->
-                <h3><span class="target-highlight">Health</span></h3> <!--class "target-highlight, it's going to only highlight the word "Health"-->
+                <h3><span class="target-highlight">Health</span></h3> <!--class "target-highlight, it's going to only highlight the word "Health", will style it in CSS-->
                 <h2>Breaking news: Coronavirus has miraculously disappeared ?</h2>
                 <h3>As Trump has predicted...</h3>
             </div>
