icon in tab bar, resizing h1

--- a/code/index.html
+++ b/code/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-    <title>ONE, 2, TREE NEWS</title>
+    <link rel="icon" type="image/png" href="./pic/favicon-16x16.png" sizes="16x16" />
+    <title>ONE 2 TREE NEWS</title>
     <link rel="stylesheet" href="./style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
@@ -13,7 +13,7 @@
     <header class="header">
       <div class="logo-and-text">
         <img class="logo" src="pic/logo.png" alt="logo for the tree news">
-        <h1 class="header-text">ONE, 2, TREE NEWS</h1>
+        <h1 class="header-text">ONE 2 TREE NEWS</h1>
     </div>
       <nav>
         <a href="#">Read more</a>
