--- a/code/index.html
+++ b/code/index.html
@@ -122,7 +122,11 @@
 <!--Footer-->
 
     <footer>
-      <p class="footer-text">Made by Helena Wiklund 2021</p>
+      <p class="footer-text">Made by Helena Wiklund 2021.
+      <br>
+       Turtle Power! 
+      </p>
+      
       <a class="icon" href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin"></i></a>
       <a class="icon" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
       <a class="icon" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
