--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header class="site-header">
+    <header>
       <!-- a header wih a site name, a logo and a navbar -->
       <a href="#" >
         <img class="logo" src="./logo.svg" alt="Technigo" />
@@ -16,9 +16,9 @@
       <h1 class="page-title">This awesome news site</h1>
       <nav>
         <p class="nav-bar">
-          <a href="#">News archive</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
+          <a class="hover" href="#">About</a>
+          <a class="hover" href="#">Contact</a>
+          <a class="hover" href="#">Subscribe</a>
         </p>
       </nav>
     </header>
