Added some comments and cleaned up the code a bit.

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
+      content="width=device-width, initial-scale=1, minimum-scale=1"
     />
     <script
       src="https://kit.fontawesome.com/7ed1b41d25.js"
@@ -16,6 +16,8 @@
   <body>
     <div class="center-screen">
       <a name="top"></a>
+
+      <!-- ---------- HEADER--------------->
 
       <header class="header">
         <a class="a-logotype" href="#top">
@@ -48,6 +50,8 @@
           </div>
         </a>
       </header>
+
+      <!-- ---------- BIG NEWS CONTAINER --------------->
 
       <section class="big-news-container">
         <div class="big-news-image">
@@ -96,6 +100,8 @@
           </div>
         </div>
       </section>
+
+      <!-- ---------- OTHER NEWS CONTAINER --------------->
 
       <section class="other-news-container">
         <div class="other-news item-1">
@@ -228,6 +234,8 @@
         </div>
       </section>
 
+      <!-- ---------- DAILY POLAROIDS --------------->
+
       <section class="daily-polaroids">
         <h3 class="daily-polaroid-header" id="daily">The daily polaroid</h3>
         <div class="daily-polaroid-container">
@@ -248,7 +256,6 @@
               </div>
             </div>
           </div>
-
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
