cleaned up code

--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,7 @@
         <a href="#">Read more</a>
         <a href="#">Members</a>
         <a href="#">Save a tree</a>
-        <a href="#">About us</a>
+        <a href="http://technigo.io">About us</a>
       </nav>
       <!-- Some kind of logo and navbar -->
     </header>
