made the smaller pics 1, 2 and 4 in mobile, ipad and desktop. moved healine

--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     
-    <header class="header">
+    <header class="header-cool">
      <img class="logo" src="./barbro logo (2).png" alt="Picture of the Technigo logo"/>
      <h2 class="header-title"> Lorem ipsum news</h2>
      <nav class="navigation">
