Finished mobile and tablet design

--- a/code/index.html
+++ b/code/index.html
@@ -28,9 +28,10 @@
     <!-- Big-news class/headline, used article to provide more semantic information to screen readers, search engines -->
     <article class="big-news">
       <img class="big-news-image" src="images/cobblestones.jpg" alt="cobblestones" />
-      <h2 class="big-news-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </h2>
+      <div class="big-news-text">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
     </article>
     <!-- Here starts the grid-news, all in one div but split into articles -->
     <div class="grid-news">
