--- a/code/index.html
+++ b/code/index.html
@@ -12,13 +12,13 @@
   <body>
    <header>
       <!-- Some kind of logo and navbar -->
-    <a href="index.html">
+    <a href="./index.html">
       <img class="logo" src="./pixelburger.png" alt="burger">
     </a>
   </header>
       <nav class="navigation">
         <li class="nav-item">
-        <a href="about.html">ABOUT</a>
+        <a href="./about.html">ABOUT</a>
       </li>
       <li class="nav-item">
         <a href="./contact.html">CONTACT</a>
@@ -47,16 +47,16 @@
     <section class="small-news">
       <!-- The other news-->
       <div class="small-news-text">
-      <a class="small-image" href="eastward.html">
+      <a class="small-image" href="./eastward.html">
         <img class="small" src="https://assets1.ignimgs.com/2019/08/23/eastward---button-fin-1566519472279.jpg">
       </a>    
         <h4>EASTWARD</h4>
-        <p>DISCOVER THE WEIRD, 
-          <br>WONDERFUL WORLD OF 
-          <br>EASTWARD!</p>
+        <p>Discover the weird, 
+          <br>wonderful world of 
+          <br>Eastward!</p>
         </div>    
         <div class="small-news-text">
-      <a class="small-image" href="nino-kuni.html">
+      <a class="small-image" href="./nino-kuni.html">
         <img class="small" src="https://cdns.kinguin.net/media/catalog/category/cache/1/hi_image/9df78eab33525d08d6e5fb8d27136e95/nino8.jpg">
       </a>
         <h4>NINO-KUNI</h4>
@@ -83,5 +83,15 @@
        </div>
     </section>
       
+    <footer>
+      <nav class="navigation">
+        <li class="nav-item">
+        <a href="./about.html">ABOUT</a>
+      </li>
+      <li class="nav-item">
+        <a href="./contact.html">CONTACT</a>
+      </li>
+      </nav>
+    </footer>
   </body>
 </html>
