--- a/code/narita-boy.html
+++ b/code/narita-boy.html
@@ -12,15 +12,15 @@
   <body>
    <header>
       <!-- Some kind of logo and navbar -->
-    <a href="index.html">
+    <a href="./index.html">
       <img class="logo" src="./pixelburger.png" alt="burger">
     </a>
       <nav class="navigation">
         <li class="nav-item">
-        <a href="about.html">ABOUT</a>
+        <a href="./about.html">ABOUT</a>
       </li>
       <li class="nav-item">
-        <a href="contact.html">CONTACT</a>
+        <a href="./contact.html">CONTACT</a>
       </li>
       </nav>
   </header>
