--- a/code/nino-kuni.html
+++ b/code/nino-kuni.html
@@ -17,10 +17,10 @@
     </a>
       <nav class="navigation">
         <li class="nav-item">
-        <a href="about.html">ABOUT</a>
+        <a href="./about.html">ABOUT</a>
       </li>
       <li class="nav-item">
-        <a href="contact.html">CONTACT</a>
+        <a href="./contact.html">CONTACT</a>
       </li>
       </nav>
   </header>
