Added another article

--- a/code/index.html
+++ b/code/index.html
@@ -54,30 +54,38 @@
     </section>
 
     <section class="small-news">
-
-      <article class="breakfast-club-wrapper">
+      <article class="small-news-one">
         <h3>Breakfast club</h3>
-        <div class="breakfast-club">
-          <p>
-            We have now a fresh menu for you, starting next week! Each month we
-            will serve you inspiring talks and activities.
-          </p>
-          <img src="./Pictures/breakfast.jpeg" />
+        <div class="flex">
+          <div class="text">
+            <p>We have now a fresh menu for you, starting next week!<br/><br/> Each month, we will serve you inspiring talks and activities.
+            </p>
+          </div>
+
+          <div>
+            <img src="./Pictures/breakfast.jpeg" />
+          </div>
         </div>
       </article>
 
-      <article class="breakfast-club-wrapper">
-        <h3>Breakfast club</h3>
-        <div class="breakfast-club">
-          <p>
-            We have now a fresh menu for you, starting next week! Each month we
-            will serve you inspiring talks and activities.
-          </p>
-          <img src="./Pictures/breakfast.jpeg" />
+      <article class="small-news-one">
+        <h3>Poya Tavakolian is going to Mars</h3>
+        <div class="flex">
+          <div class="text">
+            <p>Lorem ipsum dolor, Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ratione. distinctio.
+            </p>
+          </div>
+
+          <div>
+            <img src="./Pictures/Mars.jpeg" />
+          </div>
         </div>
       </article>
 
-     
+
+
     </section>
+
+
   </body>
 </html>
