--- a/code/index.html
+++ b/code/index.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header>
-      <img src="./logo.svg" alt="Technigo" />
-      <nav>
+    <header class="header">
+      <img class="logo" src="./logo.svg" alt="Technigo" />
+      <nav class="navigation">
         <a href="#">Big news</a>
         <a href="#">Small news</a>
       </nav>
     </header>
 
     <section class="big-news">
-      <img src="https://www.fillmurray.com/200/300" alt="Bill Murray" />
-      <p>
+      <img class="big-news-image"src="https://www.fillmurray.com/200/300" alt="Bill Murray" />
+      <p class="big-news-text">
         An ‘extremely credible source’ has called my office and told me that Lorem Ipsum’s birth certificate is a fraud. That other text? Sadly, it’s no longer a 10. Lorem Ipsum is FAKE TEXT!
       </p>
     </section>
