Main-news change

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,6 @@
     <nav>
       <img class="logo" src="./icons256.png" alt="logo">
       <h1 class="site-name">NEWS TODAY</h1>
-      <h2>small news</h2>
       <div class="navigation" id="navigation-bar">
         <ul>
           <li><a href="default.asp">Log In</a></li>
@@ -24,54 +23,103 @@
     </nav>
   </header>
   <hr>
+  <!--
+  <section class="big-news">
+    
+    <img class="big-news-picture" src="croatia.jpg" alt="big news" />
+    <div class="big-news-text-block">
+      <p class="big-news-text">
+        Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.Lorem ipsum is a pseudo-Latin text used in web design, typography,
+        layout, and printing in place of English to
+        emphasise design elements over content.Lorem ipsum is a pseudo-Latin text used in web design, typography,
+        layout, and printing in place of English to
+        emphasise design elements over content.
+      </p>
+    </div>
+  </section>
   <div class="container grid">
-    <div class="cell1"><img src="taliban.jpg" alt="taliban"></div>
-    <div class="cell2"><img src="taliban.jpg" alt="taliban"></div>
-
+    <div class="cell"><img src="taliban.jpg" alt="taliban"></div>
+    <div class="cell"><img src="taliban.jpg" alt="taliban"></div>
   </div>
+  <section class="flex-box">
+    <div class="flex-child-blue">
+      <img src="rainfall.jpg" alt="Germany">
+      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.
+      </p>
+      <button>read more</button>
+    </div>
+    <div class="flex-child-blue">
+      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.
+      </p>
+      <button>read more</button>
+    </div>
+  </section>--->
+
+  <section class="big-news">
+    <!-- The big news content -->
+    <img class="big-news-picture" src="./seaburn.jpeg" alt="big news" />
+    <div class="big-news-text-block">
+      <h2 class="big-news-title">The Bigg news</h2>
+      <p class="big-news-text">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit recusandae libero est, suscipit hic omnis quam
+        iure expedita asperiores pariatur voluptatibus soluta. Dolorem aut sapiente culpa, dolore id architecto, facilis
+        dicta animi cupiditate maiores facere unde inventore in ducimus, cumque nam vero corrupti. Tempora cupiditate
+        cum numquam sit quas consequuntur!
+      </p>
+    </div>
+  </section>
   <hr>
   <section class="flex-parent">
     <div class="flex-child-blue">
       <img src="rainfall.jpg" alt="Germany">
-      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
-        some form, by injected humour, or randomised words which don't look even slightly believable.
+      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.
       </p>
       <button>read more</button>
     </div>
     <div class="flex-child green">
       <img src="croatia.jpg" alt="croatia">
-      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
-        some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.</p>
       <button>Read more</button>
     </div>
     <div class="flex-child yellow">
       <img src="sea.jpeg" alt="sea">
-      <p>Just how much Barcelona owns to Gaudi...</p>
+      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.</p>
       <button>read more</button>
     </div>
     <div class="flex-child yellow">
       <img src="seaburn.jpeg" alt="seaburn">
-      <p>Just how much Barcelona owns to Gaudi...</p>
+      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.</p>
       <button>read more</button>
     </div>
     <div class="flex-child yellow">
       <img src="corona.png" alt="corona">
-      <p>Just how much Barcelona owns to Gaudi...</p>
+      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.</p>
       <button>read more</button>
     </div>
     <div class="flex-child yellow">
       <img src="sas.jpg" alt="sas">
-      <p>Just how much Barcelona owns to Gaudi...</p>
+      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.</p>
       <button>read more</button>
     </div>
     <div class="flex-child yellow">
       <img src="sas.jpg" alt="sas">
-      <p>Just how much Barcelona owns to Gaudi...</p>
+      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.</p>
       <button>read more</button>
     </div>
     <div class="flex-child yellow">
       <img src="sas.jpg" alt="sas">
-      <p>Just how much Barcelona owns to Gaudi...</p>
+      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+        emphasise design elements over content.</p>
       <button>read more</button>
     </div>
   </section>
