add border, shadow and margin to news-snippets

--- a/code/index.html
+++ b/code/index.html
@@ -33,9 +33,9 @@
 
       <div class="navigation">
         <nav>
-          <a class="navigation-link" href="#">Home</a>
-          <a class="navigation-link" href="#">About us</a>
-          <a class="navigation-link" href="#">Contact</a>
+          <li><a class="navigation-link" href="#">Home</a></li>
+          <li><a class="navigation-link" href="#">About us</a></li>
+          <li><a class="navigation-link" href="#">Contact</a></li>
         </nav>
       </div>
     </header>
