added another section in the body of the HTML

--- a/code/index.html
+++ b/code/index.html
@@ -35,6 +35,8 @@
       
     </header>
 
+  <section class="news">
+
     <section class="big-news">
       <section class="big-news-container">
         <img src="./images/sequins.jpg" alt ="Image of sequins">
@@ -49,7 +51,7 @@
     </section>
     </section>
 
-
+  
     <section class="other-news">
 
       <section class="card">
@@ -109,5 +111,7 @@
       </section>
 
     </section>
+
+  </section>
   </body>
 </html>
