changed nav bar. deleted paragraphs on other news. added anchor tag, added hover effects to <a>. added hover effects to images. added borders to small news.

--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -16,9 +19,10 @@
       alt="Technigo">
       <h1>Becky Bakes</h1>
       <nav class="navigation">
-        <a href="#">Main story  </a>
-        <a href="#">Other news  </a>
-        <a href="#">Contact us  </a>
+        <a href="#">Home <br> page</a>
+        <a href="#">Main <br> story  </a>
+        <a href="#">Other <br> news  </a>
+        <a href="#">Contact <br> us  </a>
       </nav>
     </header>
     
@@ -28,7 +32,7 @@
         <img class="sushi" src="./Sushi.jpg" alt="Picture of sushi"> </div>
         <div class="text-big-news"><p> <h2>New trend on the rise: Sushi meets Swedish Fika</h2>
         <h3>- Inventor calls it Fishi</h3>
-        Cupcake ipsum dolor sit amet candy. Tootsie roll candy chupa chups ice cream toffee biscuit chupa chups jelly beans. Donut jujubes cupcake cheesecake oat cake tootsie roll candy candy canes apple pie. Pudding biscuit lemon drops oat cake shortbread shortbread gummi bears icing. Danish toffee gingerbread topping dragée cheesecake dessert cake. Cotton candy gingerbread oat cake dragée jelly beans. Tootsie roll carrot cake dragée brownie dessert cotton candy. Tootsie roll fruitcake dessert apple pie sugar plum caramels lemon drops fruitcake. Topping macaroon danish cookie halvah caramels chocolate cake. Tart bear claw gummi bears jelly beans fruitcake. Gummi bears sweet roll marzipan carrot cake marzipan. Tootsie roll candy cotton candy dragée gingerbread.
+        <p>Cupcake ipsum dolor sit amet candy. Tootsie roll candy chupa chups ice cream toffee biscuit chupa chups jelly beans. Donut jujubes cupcake cheesecake oat cake tootsie roll candy candy canes apple pie. Pudding biscuit lemon drops oat cake shortbread shortbread gummi bears icing. Danish toffee gingerbread topping dragée cheesecake dessert cake. Cotton candy gingerbread oat cake dragée jelly beans. Tootsie roll carrot cake dragée brownie dessert cotton candy. Tootsie roll fruitcake dessert apple pie sugar plum caramels lemon drops fruitcake. Topping macaroon danish cookie halvah caramels chocolate cake. Tart bear claw gummi bears jelly beans fruitcake. Gummi bears sweet roll marzipan carrot cake marzipan. Tootsie roll candy cotton candy dragée gingerbread.
         </p>
       </div>
       </section>
@@ -38,58 +42,50 @@
       <div class="small-news">
         <img class="image-other" src="./biscuit-basket.jpg" alt="Biscuit in a basket">
         <div class="text-other-news">
-        <h3>Kex/tjex argument continues in Swedish parlament</h3>
-        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
-        </p></div>
+        <a href="#"> <h3>Kex/tjex argument continues in Swedish parlament</h3></a>
+      </div> 
       </div>
       <div class="small-news">
         <img class="image-other" src="./biscuit-box.jpg" alt="Biscuits in a box">
         <div class="text-other-news">
-        <h3>New version of the Ballerina biscuit in stores next month</h3>
-        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
-        </p></div>
+        <a href="#"><h3>New version of the Ballerina biscuit in stores next month</h3></a>
+        </div>
       </div>
       <div class="small-news">
         <img class="image-other" src="./canoe.jpg" alt="Picture of a woman in a canoe">
         <div class="text-other-news">
-        <h3>Fika for adventurers; tips on what to bring</h3>
-        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
-        </p></div>
+        <a href="#"><h3>Fika for adventurers; tips on what to bring</h3></a>
+        </div>
       </div>
       <div class="small-news">
         <img class="image-other" src="./child-baking.jpg" alt="Woman and Child in kitchen baking">
         <div class="text-other-news">
-        <h3>How to get you child interested in baking</h3>
-        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
-        </p></div>
+          <a href="#"><h3>How to get you child interested in baking</h3></a>
+       </div>
       </div>
       <div class="small-news">
         <img class="image-other" src="./cinnamon-bun.jpg" alt="Cinnamon buns">
         <div class="text-other-news">
-        <h3>Research indicates that fika could be the solution to world peace</h3>
-        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
-        </p></div>
+        <a href="#"><h3>Research indicates that fika could be the solution to world peace</h3></a>
+        </div>
       </div>
       <div class="small-news">
         <img class="image-other" src="./coffee-cups.jpg" alt="Cups of coffee in a circle">
         <div class="text-other-news">
-        <h3>What your coffee cup tells us about you</h3>
-        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
-        </p></div>
+        <a href="#"><h3>What your coffee cup tells us about you</h3></a>
+       </div>
       </div>
       <div class="small-news">
         <img class="image-other" src="./healthy-biscuit.jpg" alt="Biscuits with fruit on">
         <div class="text-other-news">
-        <h3>If there's fruit on them, they're healthy!</h3>
-        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
-        </p></div>
+        <a href="#"><h3>If there's fruit on them, they're healthy!</h3></a>
+       </div>
       </div>
       <div class="small-news">
         <img class="image-other" src="./Macaron-tower.jpg" alt="Tower of macarons">
         <div class="text-other-news">
-        <h3>How your choice in wedding fika can make your special day unique</h3>
-        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
-        </p></div>
+        <a href="#"><h3>How your choice in wedding fika can make your special day unique</h3></a>
+        </div>
       </div>
     </section>
   </section>
